# Agent365-Samples

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  python-refactor-design-review.md
.claude/agents/: agent365-anti-pattern-detector.md  pr-quality-guardian.md  sample-code-reviewer.md  security-compliance-reviewer.md
.claude/commands/: post-review-comments.md  resolve-review.md  review-pr.md  review-staged.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-dotnet-agentframework-sampleagent.yml  ci-dotnet-semantickernel-sampleagent.yml  ci-nodejs-claude-sampleagent.yml  ci-nodejs-langchain-sampleagent.yml  ci-nodejs-openai-sampleagent.yml  ci-nodejs-vercelsdk-sampleagent.yml  ci-orchestrator.yml  ci-python-agentframework-sampleagent.yml  ci-python-googleadk-sampleagent.yml  ci-python-openai-sampleagent.yml  codeql.yml  docker-container-sampleagent-python.yml  e2e-agent-samples.yml  e2e-dotnet-agent-framework.yml  e2e-dotnet-semantic-kernel.yml  e2e-metrics.yml  e2e-nodejs-copilot-studio.yml  e2e-nodejs-langchain.yml  e2e-nodejs-openai.yml  e2e-orchestrator.yml  e2e-python-agent-framework.yml  e2e-python-bedrock.yml  e2e-python-google-adk.yml  e2e-python-openai.yml  points.yml  python-claude-sample.yml  update-e2e-status.yml  (+1 more)
docs/: design.md  multiple-messages-tracking.md  user-identity-rollout-plan.md
prompts/: Cursor IDE Prompt.md  GitHub Copilot.md  github-copilot.md
python/a365-help-assistant/: .env.example  README.md  ToolingManifest.json  agent.py  agent_interface.py  documentation_index.json  host_agent_server.py  local_authentication_options.py  pyproject.toml  start_with_generic_host.py  token_cache.py
python/a365-help-assistant/resources/: api-reference.md  configuration-reference.md  deployment-guide.md  getting-started.md  troubleshooting.md
python/agent-framework/sample-agent/: .dockerignore  .env.template  AGENT-CODE-WALKTHROUGH.md  AGENT-TESTING.md  Dockerfile  README.md  SETUP-GUIDE.md  ToolingManifest.json  _ToolingManifest.json  agent.py  agent_interface.py  agent_metrics.py  host_agent_server.py  hosting.py  m365agents.playground.yml  main.py  mcp_tool_registration_service.py  pyproject.toml  requirements.txt  start_with_generic_host.py  telemetry.py
python/agent-framework/sample-agent/publish/: a365.config.json  a365.generated.config.json  host_agent_server.py  oryx-manifest.toml
python/agent-framework/sample-agent/publish/manifest/: agenticUserTemplateManifest.json  manifest.json
python/agent-framework/sample-agent/temp_pkg/: microsoft_agents_a365_tooling_extensions_agentframework-0.1.0-py3-none-any.whl  patched_mcp_tool_registration_service.py
python/agent-framework/sample-agent/temp_pkg/extracted/microsoft_agents_a365_tooling_extensions_agentframework-0.1.0.dist-info/: METADATA  RECORD
python/agent-framework/sample-agent/tests/: test_tooling_manifest.py
python/autonomous/github-trending/: .env.template  Agent365-python.code-workspace  README.md  github_trending_service.py  main.py  observability_token_service.py  pyproject.toml  token_cache.py
python/autonomous/github-trending/tools/: github_trending_tool.py
python/bedrock/sample-agent/: .env.template  README.md  pyproject.toml
python/bedrock/sample-agent/src/: __init__.py  agent.py  agent_factory.py  agent_interface.py  client.py  host.py  local_mcp_registration_server.py  main.py  token_cache.py
python/claude/sample-agent/: .env.template  AGENT-CODE-WALKTHROUGH.md  README.md  ToolingManifest.json  agent.py  host_agent_server.py  mcp_tool_registration_service.py  observability_config.py  pyproject.toml  turn_context_utils.py
python/claude/sample-agent/docs/: design.md
python/claude/sample-agent/tests/: conftest.py  test_mcp_tool_registration_service.py
python/copilot-studio/sample-agent/: .env.template  .gitignore  README.md  ToolingManifest.json  agent.py  client.py  main.py  pyproject.toml  requirements.txt
python/copilot-studio/sample-agent/docs/: design.md
python/crewai/sample_agent/: .env.template  .gitignore  README.md  ToolingManifest.json  agent.py  agent_interface.py  constants.py  driving_safety_report.md  host_agent_server.py  local_authentication_options.py  mcp_observable_tools.py  mcp_tool_registration_service.py  notification_handler.py  observability_config.py  pyproject.toml  start_with_generic_host.py  token_cache.py  turn_context_utils.py
python/crewai/sample_agent/docs/: design.md
python/crewai/sample_agent/src/crew_agent/: agent_runner.py  crew.py  main.py
python/crewai/sample_agent/src/crew_agent/config/: agents.yaml  tasks.yaml
python/crewai/sample_agent/src/crew_agent/tools/: custom_tool.py
python/crewai/sample_agent/tests/: conftest.py  test_mcp_tool_registration_service.py
python/devin/sample-agent/: .env.template  .gitignore  README.md  ToolingManifest.json  agent.py  client.py  m365agents.playground.yml  main.py  pyproject.toml
python/google-adk/sample-agent/: .env.template  .gcloudignore  AGENT-CODE-WALKTHROUGH.md  README.md  ToolingManifest.json  _freeze.py  agent.py  debug_probe.py  deploy-cloudrun.ps1  host.py  hosting.py  main.py  mcp_tool_registration_service.py  observability_remap.py  pyproject.toml  requirements.txt  token_cache.py
python/google-adk/sample-agent/docs/: design.md
python/google-adk/sample-agent/tests/: conftest.py  test_mcp_tool_registration_service.py
python/observability-with-azure-monitor/: .env.template  README.md  main.py  pyproject.toml
python/observability-with-langgraph/: .env.template  README.md  main.py  pyproject.toml
python/observability-with-otlp/: .env.template  README.md  main.py  pyproject.toml
python/semantic-kernel/sample-agent/: .env.template  README.md  agent.py  agent_interface.py  host_agent_server.py  local_authentication_options.py  mcp_tool_registration_service.py  observability_config.py  pyproject.toml  start_with_generic_host.py  turn_context_utils.py
scripts/: Update-ReadmeVersions.ps1  assign_points.py  config_points.yml  track_points.py  update_leaderboard.py
(+754 files in other folders)
