[project]
name = "observability-with-azure-monitor"
version = "0.1.0"
description = "Sample: Agent 365 SDK with existing Azure Monitor OpenTelemetry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.2.6",
    "azure-monitor-opentelemetry>=1.6.0",
    "microsoft-agents-a365-observability-core",
    "microsoft-agents-a365-observability-extensions-openai",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
