[project]
name = "observability-with-otlp"
version = "0.1.0"
description = "Sample: Agent 365 SDK with existing OTel SDK + manual instrumentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "microsoft-agents-a365-observability-core",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
