[project]
name = "agent-365-sample"
version = "0.1.0"
dependencies = [
    # AgentFramework SDK - The official package
    "agent-framework-azure-ai",
    
    # Azure AI Projects - explicitly require pre-release version
    "azure-ai-agents>=1.2.0b5",
    "azure-ai-projects>=2.0.0b2",

    # Microsoft Agents SDK - Official packages for hosting and integration
    "microsoft-agents-hosting-aiohttp",
    "microsoft-agents-hosting-core",
    "microsoft-agents-authentication-msal",
    "microsoft-agents-activity",
    "opentelemetry-instrumentation-aiohttp-server",
    "opentelemetry-instrumentation-aiohttp-client",
    "opentelemetry-instrumentation-requests",

    # Azure SDK components
    "azure-identity",

    # Core dependencies
    "python-dotenv",
    "aiohttp",

    # HTTP server support for MCP servers
    "uvicorn[standard]>=0.20.0",
    "fastapi>=0.100.0",

    # HTTP client
    "httpx>=0.24.0",

    # Data validation
    "pydantic>=2.0.0",

    # Additional utilities
    "typing-extensions>=4.0.0",

    # Microsoft Agent 365 SDK packages
    "microsoft_agents_a365_tooling >= 0.1.0",
    "microsoft_agents_a365_tooling_extensions_agentframework >= 0.1.0",
    "microsoft_agents_a365_observability_core >= 0.1.0",
    "microsoft_agents_a365_observability_extensions_agent_framework >= 0.1.0",
    "microsoft_agents_a365_runtime >= 0.1.0",
    "microsoft_agents_a365_notifications >= 0.1.0"
]


[tool.uv.workspace]
members = [
    "C:/Users/robrandao/agents/otel/a365-python/libraries/*"
]
exclude = [
    ".",
    "samples/*",
    "tests/*"
]

[tool.uv.sources]
microsoft-agents-a365-notifications = { workspace = true }
microsoft-agents-a365-observability-core = { workspace = true }
microsoft-agents-a365-runtime = { workspace = true }
microsoft-agents-a365-tooling = { workspace = true }
microsoft-agents-a365-tooling-extensions-agentframework = { workspace = true }
microsoft-agents-a365-observability-hosting = { workspace = true }
microsoft-agents-a365-observability-extensions-agent-framework = { workspace = true }