[project]
name = "github-trending-agent"
version = "0.1.0"
description = "Autonomous GitHub Trending Agent — Agent 365 Sample"
authors = [{ name = "Microsoft", email = "support@microsoft.com" }]
requires-python = ">=3.11"

dependencies = [
    "openai>=2.32.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "aiohttp>=3.13.5",
    "azure-identity>=1.25.3",
    "msal>=1.36.0",
    "microsoft-opentelemetry>=0.1.0a4",
    "microsoft_agents_a365_observability_core>=0.3.0.dev6",
]

[tool.uv]
prerelease = "allow"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
