[project]
name = "crew_agent"
version = "0.1.0"
description = "CrewAI Sample Agent using Microsoft Agent 365 SDK with MCP tooling support"
authors = [{ name = "Microsoft", email = "support@microsoft.com" }]
requires-python = ">=3.11"
dependencies = [
    "crewai[azure-ai-inference,tools]==1.4.1",
    "pysqlite3-binary>=0.5.2",
    "tavily-python>=0.3.0",
    "python-dotenv>=1.0.0",
    
    # Microsoft 365 Agents SDK - hosting and auth
    "microsoft-agents-hosting-aiohttp>=0.7.0",
    "microsoft-agents-hosting-core>=0.7.0",
    "microsoft-agents-authentication-msal>=0.7.0",
    "microsoft-agents-activity>=0.7.0",
    
    # Core hosting deps
    "aiohttp",
    
    # Agent 365 packages (use stable versions from PyPI)
    "microsoft_agents_a365_tooling>=0.1.0",
    "microsoft_agents_a365_observability_core>=0.1.0",
    "microsoft_agents_a365_observability_hosting>=0.1.0",
    "microsoft_agents_a365_notifications>=0.1.0",
    "microsoft_agents_a365_runtime>=0.1.0",
    "wrapt>=2.0.1",
]

[project.scripts]
agent_runner = "crew_agent.agent_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

# Allow pre-release versions for Microsoft Agent 365 SDK packages
# This ensures we always get the latest features and fixes
[tool.uv]
prerelease = "allow"
