[project]
name = "sample-google-adk"
version = "0.1.0"
description = "Sample Google ADK Agent using Microsoft Agent 365 SDK"
authors = [
    { name = "Microsoft", email = "support@microsoft.com" }
]
dependencies = [
    # Google ADK -- official package
    "google-adk>=1.18.0",

    # Microsoft Agents SDK - Official packages for hosting and integration
    "microsoft-agents-hosting-aiohttp",
    "microsoft-agents-hosting-core",
    "microsoft-agents-authentication-msal",
    "microsoft-agents-activity",

    # Core dependencies
    "python-dotenv",
    "aiohttp",

    # HTTP server support for MCP servers
    "uvicorn[standard]>=0.20.0",
    "fastapi>=0.100.0",

    # HTTP client
    "httpx>=0.24.0",

    # Data validation
    "pydantic>=2.0.0",

    # Additional utilities
    "typing-extensions>=4.0.0",

    # Microsoft Agent 365 SDK packages
    "microsoft_agents_a365_tooling >= 0.1.0",
    "microsoft_agents_a365_tooling_extensions_googleadk >= 0.1.0",
    "microsoft_agents_a365_observability_core >= 0.1.0",
    "microsoft_agents_a365_notifications >= 0.1.0",
]
requires-python = ">=3.11"

# Package index configuration
# PyPI is the default/primary source
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

# Allow pre-release versions for Microsoft Agent 365 SDK packages
# This ensures we always get the latest features and fixes
[tool.uv]
prerelease = "allow"
# Overrides to resolve conflicts between google-adk and agent-framework-core:
# - google-adk requires opentelemetry-sdk<1.39.0
# - agent-framework-core requires opentelemetry-sdk>=1.39.0
# google-adk is the binding constraint; the otel API is stable across these versions.
# Also overrides gradio's outdated pydantic upper bound and old ruff pin.
override-dependencies = [
    # Pin entire otel stack to 1.38.x — google-adk requires sdk<1.39.0
    # and all otel packages must be on the same minor version.
    "opentelemetry-api>=1.38.0,<1.39.0",
    "opentelemetry-sdk>=1.38.0,<1.39.0",
    "opentelemetry-exporter-otlp>=1.38.0,<1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0,<1.39.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.38.0,<1.39.0",
    "opentelemetry-exporter-otlp-proto-common>=1.38.0,<1.39.0",
    "opentelemetry-proto>=1.38.0,<1.39.0",
    "opentelemetry-semantic-conventions>=0.59b0,<0.60b0",
    "opentelemetry-instrumentation>=0.59b0,<0.60b0",
    "pydantic>=2.0.0",
    "ruff>=0.9.3",
]

[project.optional-dependencies]
dev = [
    # For development and testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Don't include any Python modules in the package since this is a sample/script collection
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["build*", "dist*", "venv*"]
