[project]
name = "sample-google-adk"
version = "0.1.0"
description = "Sample Google ADK Agent using Microsoft Agent 365 SDK"
authors = [
    { name = "Microsoft", email = "support@microsoft.com" }
]
dependencies = [
    # Google ADK -- official package (1.32+ lifted the otel<1.39 constraint)
    "google-adk>=1.32.0,<2",

    # Microsoft Agents SDK - Official packages for hosting and integration
    "microsoft-agents-hosting-aiohttp>=0.10.0.dev4",
    "microsoft-agents-hosting-core>=0.10.0.dev4",
    "microsoft-agents-authentication-msal>=0.10.0.dev4",
    "microsoft-agents-activity>=0.10.0.dev4",

    # Core dependencies
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",

    # HTTP server support for MCP servers
    "uvicorn[standard]>=0.20.0",
    "fastapi>=0.100.0",

    # HTTP client
    "httpx>=0.24.0",

    # Data validation
    "pydantic>=2.0.0",

    # Additional utilities
    "typing-extensions>=4.0.0",

    # Microsoft Agent 365 SDK packages (GA 1.0.0 — released May 1 2026)
    "microsoft-agents-a365-tooling>=1.0.0",
    "microsoft-agents-a365-observability-core>=1.0.0",
    "microsoft-agents-a365-observability-hosting>=1.0.0",
    "microsoft-agents-a365-notifications>=1.0.0",
    "microsoft-agents-a365-runtime>=1.0.0",

    # Microsoft OpenTelemetry Distro — required by main.py and agent.py
    # (use_microsoft_opentelemetry, microsoft.opentelemetry.a365.core.BaggageBuilder)
    "microsoft-opentelemetry>=1.2.0",
]
requires-python = ">=3.11"

# Package index configuration
# PyPI is the default/primary source
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

# Allow pre-release versions for Microsoft Agent 365 SDK packages
# This ensures we always get the latest features and fixes
[tool.uv]
prerelease = "allow"

[project.optional-dependencies]
dev = [
    # For development and testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Don't include any Python modules in the package since this is a sample/script collection
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["build*", "dist*", "venv*"]
